liked 컨트롤러 서비스 분리 / 로그인 401에러, 마이페이지 사진 용량 에러 메세지 alert 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -380,6 +380,13 @@
                     localStorage.setItem("token", response['token']);
                     localStorage.setItem("username", response['username']);
                     location.href = '/';
+                },
+                error : function (request) {
+                    if(request.status === 401) {
+                        alert("아이디 혹은 비밀번호를 다시 확인해주세요")
+                    } if(request.status === 500) {
+                        alert("아이디 혹은 비밀번호를 다시 확인해주세요")
+                    }
                 }
             })
         }
