liked 컨트롤러 서비스 분리 / 로그인 401에러, 마이페이지 사진 용량 에러 메세지 alert 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -383,9 +383,9 @@
                 },
                 error : function (request) {
                     if(request.status === 401) {
-                        alert("아이디 혹은 비밀번호를 다시 확인해주세요")
+                        alert("등록된 아이디가 없거나 비밀번호를 다시 확인해주세요.")
                     } if(request.status === 500) {
-                        alert("아이디 혹은 비밀번호를 다시 확인해주세요")
+                        alert("카카오톡 이메일을 동의해주시거나, 이미 등록된 카카오 유저입니다. 고객센터로 문의해주세요.")
                     }
                 }
             })
