--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -171,6 +171,7 @@
                         success: function (response) {
                             localStorage.setItem("token", response['token']);
                             localStorage.setItem("username", response['username']);
+                            localStorage.setItem("nickname", response['nickname']);
                             location.href = '/';
                         }
                     })
