--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -68,6 +68,7 @@
                 $("#mypage").css("display", "");
                 $("#login").css("display", "none");
                 $("#username").html(localStorage.getItem("username"));
+                $("#nickname").html(localStorage.getItem("nickname"));
 
             } else {
                 //토큰이 없으면 로그아웃된 화면
@@ -289,7 +290,7 @@
                         data: JSON.stringify({'token': authObj['access_token']}),
                         success: function (response) {
                             localStorage.setItem("token", response['token']);
-                            localStorage.setItem("username", response['username']);
+                            localStorage.setItem("username", response['nickname']);
                             location.href = '/';
                         }
                     })
