mypage js 에 username/nickname 처리

--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -100,7 +100,7 @@
             </div>
             <div style="margin-top:10px; margin-left:20px; float:left; ">
                 <span>@</span>
-                <span id="username"></span>
+                <span id="welcomename"></span>
                 <br/>
                 <span id="usercomment"></span><br/>
                 <span class="badge text-dark" style="background-color: #5ee1b4;"
