--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,7 +86,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "/liked",
+                url: "${apiUrl}/liked",
                 success: function (response) {
                     console.log(response);
                     for (let i = 0; i < response.length; i++) {
@@ -178,7 +178,7 @@
                 console.log(id);
                 $.ajax({
                     type: "POST",
-                    url: `/liked/${id}`,
+                    url: `${apiUrl}/liked/${id}`,
                     success: function (response) {
                         console.log(response);
                         window.location.reload();
@@ -189,7 +189,7 @@
                 console.log(id);
                 $.ajax({
                     type: "DELETE",
-                    url: `/liked/${id}`,
+                    url: `${apiUrl}/liked/${id}`,
                     success: function (response) {
                         console.log(response);
                         window.location.reload();
@@ -249,7 +249,7 @@
             }
             $.ajax({
                 type: 'POST',
-                url: `/signup`,
+                url: `${apiUrl}/signup`,
                 contentType: "application/json",
                 data: JSON.stringify(info),
                 success: function (response) {
@@ -276,7 +276,7 @@
             let info = {"username": $("#loginusername").val()};
             $.ajax({
                 type: "POST",
-                url: `/signup/idcheck`,
+                url: `${apiUrl}/signup/idcheck`,
                 contentType: "application/json",
                 data: JSON.stringify(info),
                 success: function (response) {
@@ -299,7 +299,7 @@
                 success: function (authObj) {
                     $.ajax({
                         type: 'POST',
-                        url: `/login/kakao`,
+                        url: `${apiUrl}/login/kakao`,
                         contentType: "application/json",
                         data: JSON.stringify({'token': authObj['access_token']}),
                         success: function (response) {
@@ -389,7 +389,7 @@
             }
             $.ajax({
                 type: 'POST',
-                url: `/login`,
+                url: `${apiUrl}/login`,
                 contentType: "application/json",
                 data: JSON.stringify(info),
                 success: function (response) {
