--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,6 +54,7 @@
     </style>
 
     <script>
+        let apiUrl = "https://backend.thebestmeal.shop"
         $(document).ready(function () {
             //토큰이 있으면 로그인 화면
 
