--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -87,7 +87,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "${apiUrl}/liked",
+                url: `${apiUrl}/liked`,
                 success: function (response) {
                     console.log(response);
                     for (let i = 0; i < response.length; i++) {
