맛있는 것 추천하기 부분 로그인 필터 추가

--- a/src/main/resources/static/posting.html
+++ b/src/main/resources/static/posting.html
@@ -66,16 +66,13 @@
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="nav-container">
                 <div class="nav-title-box">
-
                     <a href="/" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
                     <a href="/recommend.html" class="nave-menu-text nav-menu">뭐먹을지 추천받기</a>
                     <a href="/posting.html" class="nave-menu-text nav-menu">맛있는거 추천하기</a>
                 </div>
                 <div class="nav-botton-box">
                     <button class="nav-button" id="logout">로그아웃</button>
-                    <button class="nav-button" onclick="window.location.href = '/mypage.html'" id="mypage">마이페이지
-
-                    </button>
+                    <button class="nav-button" onclick="window.location.href = '/mypage.html'" id="mypage">마이페이지</button>
                 </div>
             </div>
         </div>
