refactoring CI/CD

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="js/main.js" rel="script"></script>
+    <script src="js/base.js"></script>
 
     <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +55,6 @@
     </style>
 
     <script>
-        let apiUrl = "https://backend.thebestmeal.shop"
         $(document).ready(function () {
             //토큰이 있으면 로그인 화면
 
