--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -31,6 +31,7 @@
 
     <script src="js/main.js" rel="script"></script>
     <script src="js/mypage.js" rel="script"></script>
+    <script src="js/base.js"></script>
 
     <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
