--- a/src/main/resources/static/kakao.html
+++ b/src/main/resources/static/kakao.html
@@ -28,6 +28,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="js/base.js"></script>
 
     <!-- 카카오 API KEY -->
     <script type="text/javascript"
