--- a/src/main/resources/static/posting.html
+++ b/src/main/resources/static/posting.html
@@ -44,6 +44,7 @@
 
     <!--JS 파일-->
     <script src="js/posting.js" rel="script"></script>
+    <script src="js/base.js"></script>
 
     <style>
         img {
