--- a/src/main/resources/static/recommend.html
+++ b/src/main/resources/static/recommend.html
@@ -35,6 +35,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 
     <script src="js/main.js" rel="script"></script>
+    <script src="js/base.js"></script>
 
 </head>
 
