--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -527,7 +527,12 @@
                 </div>
             </div>
         </section>
+        <!-- 추후 인기 있는 음식으로 바꿀 예정 id값 = famousFood-->
         <div id="foodList" class="foodCardList">
+        </div>
+        <div id="newUpdate" class="foodCardList">
+        </div>
+        <div id="bestFood" class="foodCardList">
         </div>
 
     </main>
