전체 포스팅 리스트 card 불러오기

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -30,7 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <script src="js/main.js" rel="script"></script>
-    <script src="js/mypage.js" rel="script"></script>
+    <script src="js/admin.js" rel="script"></script>
     <script src="js/base.js"></script>
 
     <!-- 구글 폰트 -->
@@ -116,7 +116,7 @@
             <div class="none-box" style="height: 10px; clear:left;"></div>
             <div id="user-table">
             </div>
-            <div id="foodList" class="foodCardList"></div>
+            <div id="adminPostingList" class="postingCardList"></div>
         </div>
     </main>
     <footer class="text-muted py-5" id="footer" style="background-color: #222529; height: 140px">
