posting과 food 함께 가져오기 성공

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -119,20 +119,20 @@
             <div id="adminPostingList" class="postingCardList"></div>
         </div>
     </main>
-    <footer class="text-muted py-5" id="footer" style="background-color: #222529; height: 140px">
-        <div class="container">
-            <p class="float-end mb-1">
-                <a href="#">Back to top</a>
-            </p>
-            <p style="color:white; font-size: 11pt; text-decoration: none; ">
-                <strong>오늘 뭐 먹지?</strong> made by
-                <a href="https://github.com/bestmealever" style="text-decoration: none; color:white;">이거사조</a>. <br>
-                이거사조 is Team 4 in 내일배움캠프. <br>
-                Welcome to <a href="https://spartacodingclub.kr/"
-                              style="text-decoration: none; color:white;">스파르타코딩클럽</a>.
-            </p>
-        </div>
-    </footer>
+<!--    <footer class="text-muted py-5" id="footer" style="background-color: #222529; height: 140px">-->
+<!--        <div class="container">-->
+<!--            <p class="float-end mb-1">-->
+<!--                <a href="#">Back to top</a>-->
+<!--            </p>-->
+<!--            <p style="color:white; font-size: 11pt; text-decoration: none; ">-->
+<!--                <strong>오늘 뭐 먹지?</strong> made by-->
+<!--                <a href="https://github.com/bestmealever" style="text-decoration: none; color:white;">이거사조</a>. <br>-->
+<!--                이거사조 is Team 4 in 내일배움캠프. <br>-->
+<!--                Welcome to <a href="https://spartacodingclub.kr/"-->
+<!--                              style="text-decoration: none; color:white;">스파르타코딩클럽</a>.-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </footer>-->
 </div>
 </body>
 </html>
